--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 bcrypt==4.2.1
 blinker==1.9.0
+cffi==1.17.1
+chardet==5.2.0
 click==8.1.8
 colorama==0.4.6
+cryptography==44.0.0
 Flask==3.1.0
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.7.1
@@ -10,8 +13,13 @@ Jinja2==3.1.5
 mariadb==1.1.11
 MarkupSafe==3.0.2
 packaging==24.2
+pillow==11.1.0
 prettytable==3.13.0
+pycparser==2.22
 PyJWT==2.10.1
+pyOpenSSL==25.0.0
 python-dotenv==1.0.1
+reportlab==4.2.5
 wcwidth==0.2.13
 Werkzeug==3.1.3
+XlsxWriter==3.2.2
